# airsink

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/app/: mod.rs
src/codec/: mod.rs
src/config/: mod.rs
src/core/: audio.rs  device.rs  mod.rs  state.rs
src/crypto/: mod.rs
src/discovery/: mod.rs
src/hap/: mod.rs  srp.rs  tlv.rs
src/pipewire/: mod.rs
src/rtp/: mod.rs
src/rtsp/: mod.rs
src/timing/: mod.rs  ptp.rs
src/ui/: mod.rs
